parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMENTARIO

Grammar

Rule 0     S' -> A
Rule 1     A -> ALGORITMO ID PRINCIPAL INICIO instrucciones FIN
Rule 2     instrucciones -> instruccion instrucciones
Rule 3     instrucciones -> <empty>
Rule 4     asignacion -> ID = operacion
Rule 5     operacion -> <empty>
Rule 6     operacion -> operacion + operacion
Rule 7     operacion -> operacion - operacion
Rule 8     operacion -> operacion * operacion
Rule 9     operacion -> operacion / operacion
Rule 10    operacion -> operacion MAYORIGUAL operacion
Rule 11    operacion -> operacion MENORIGUAL operacion
Rule 12    operacion -> operacion IGUAL operacion
Rule 13    operacion -> operacion DIFERENTE operacion
Rule 14    operacion -> operacion < operacion
Rule 15    operacion -> operacion > operacion
Rule 16    operacion -> ( operacion )
Rule 17    operacion -> - operacion
Rule 18    operacion -> ID
Rule 19    operacion -> numero
Rule 20    operacion -> CADENALITERAL
Rule 21    operacion -> CARACTER
Rule 22    instruccion -> declaracion
Rule 23    instruccion -> asignacion
Rule 24    instruccion -> mientras
Rule 25    instruccion -> si
Rule 26    instruccion -> para
Rule 27    instruccion -> lectura
Rule 28    instruccion -> escritura
Rule 29    numero -> NUMEROENTERO
Rule 30    numero -> NUMEROREAL
Rule 31    declaracion -> tipo defineTipo : ID listaVar
Rule 32    declaracion -> tipo defineTipo : ID = operacion listaVar
Rule 33    defineTipo -> <empty>
Rule 34    listaVar -> , ID listaVar
Rule 35    listaVar -> <empty>
Rule 36    listaVar -> , ID = operacion listaVar
Rule 37    tipo -> ENTERO
Rule 38    tipo -> CARACTER
Rule 39    tipo -> REAL
Rule 40    tipo -> CADENA
Rule 41    tipo -> BOOLEANO
Rule 42    operacionLogica -> operacion
Rule 43    operacionLogica -> operacionLogica OPOR operacion
Rule 44    operacionLogica -> operacionLogica OPAND operacion
Rule 45    operacionLogica -> operacionLogica OPXOR operacion
Rule 46    operacionLogica -> OPNOT operacion
Rule 47    operacionLogica -> ( operacionLogica )
Rule 48    comparacion -> operando
Rule 49    comparacion -> operando < operando
Rule 50    comparacion -> operando > operando
Rule 51    comparacion -> operando MAYORIGUAL operando
Rule 52    comparacion -> operando MENORIGUAL operando
Rule 53    comparacion -> operando IGUAL operando
Rule 54    comparacion -> operando DIFERENTE operando
Rule 55    comparacion -> ( comparacion )
Rule 56    operando -> operacion
Rule 57    operando -> ID
Rule 58    operando -> VERDADERO
Rule 59    operando -> FALSO
Rule 60    lectura -> LEER ( ID )
Rule 61    escritura -> ESCRIBIR ( CADENALITERAL )
Rule 62    escritura -> ESCRIBIR ( operacion )
Rule 63    escritura -> ESCRIBIR ( ID )
Rule 64    si -> SI ( operacionLogica ) ENTONCES instrucciones sino FINSI
Rule 65    si -> SI ( operacionLogica ) OPAND ( operacionLogica ) ENTONCES instrucciones sino FINSI
Rule 66    si -> SI ( operacionLogica ) OPOR ( operacionLogica ) ENTONCES instrucciones sino FINSI
Rule 67    si -> SI ( operacionLogica ) OPXOR ( operacionLogica ) ENTONCES instrucciones sino FINSI
Rule 68    sino -> <empty>
Rule 69    sino -> SINO instrucciones
Rule 70    mientras -> MIENTRAS ( operacionLogica ) HACER instrucciones FINMIENTRAS
Rule 71    para -> PARA ID = numero HASTA numero inc instrucciones FINPARA
Rule 72    inc -> INC numero
Rule 73    inc -> <empty>

Terminals, with rules where they appear

(                    : 16 47 55 60 61 62 63 64 65 65 66 66 67 67 70
)                    : 16 47 55 60 61 62 63 64 65 65 66 66 67 67 70
*                    : 8
+                    : 6
,                    : 34 36
-                    : 7 17
/                    : 9
:                    : 31 32
<                    : 14 49
=                    : 4 32 36 71
>                    : 15 50
ALGORITMO            : 1
BOOLEANO             : 41
CADENA               : 40
CADENALITERAL        : 20 61
CARACTER             : 21 38
COMENTARIO           : 
DIFERENTE            : 13 54
ENTERO               : 37
ENTONCES             : 64 65 66 67
ESCRIBIR             : 61 62 63
FALSO                : 59
FIN                  : 1
FINMIENTRAS          : 70
FINPARA              : 71
FINSI                : 64 65 66 67
HACER                : 70
HASTA                : 71
ID                   : 1 4 18 31 32 34 36 57 60 63 71
IGUAL                : 12 53
INC                  : 72
INICIO               : 1
LEER                 : 60
MAYORIGUAL           : 10 51
MENORIGUAL           : 11 52
MIENTRAS             : 70
NUMEROENTERO         : 29
NUMEROREAL           : 30
OPAND                : 44 65
OPNOT                : 46
OPOR                 : 43 66
OPXOR                : 45 67
PARA                 : 71
PRINCIPAL            : 1
REAL                 : 39
SI                   : 64 65 66 67
SINO                 : 69
VERDADERO            : 58
error                : 

Nonterminals, with rules where they appear

A                    : 0
asignacion           : 23
comparacion          : 55
declaracion          : 22
defineTipo           : 31 32
escritura            : 28
inc                  : 71
instruccion          : 2
instrucciones        : 1 2 64 65 66 67 69 70 71
lectura              : 27
listaVar             : 31 32 34 36
mientras             : 24
numero               : 19 71 71 72
operacion            : 4 6 6 7 7 8 8 9 9 10 10 11 11 12 12 13 13 14 14 15 15 16 17 32 36 42 43 44 45 46 56 62
operacionLogica      : 43 44 45 47 64 65 65 66 66 67 67 70
operando             : 48 49 49 50 50 51 51 52 52 53 53 54 54
para                 : 26
si                   : 25
sino                 : 64 65 66 67
tipo                 : 31 32

Parsing method: LALR

state 0

    (0) S' -> . A
    (1) A -> . ALGORITMO ID PRINCIPAL INICIO instrucciones FIN

    ALGORITMO       shift and go to state 2

    A                              shift and go to state 1

state 1

    (0) S' -> A .



state 2

    (1) A -> ALGORITMO . ID PRINCIPAL INICIO instrucciones FIN

    ID              shift and go to state 3


state 3

    (1) A -> ALGORITMO ID . PRINCIPAL INICIO instrucciones FIN

    PRINCIPAL       shift and go to state 4


state 4

    (1) A -> ALGORITMO ID PRINCIPAL . INICIO instrucciones FIN

    INICIO          shift and go to state 5


state 5

    (1) A -> ALGORITMO ID PRINCIPAL INICIO . instrucciones FIN
    (2) instrucciones -> . instruccion instrucciones
    (3) instrucciones -> .
    (22) instruccion -> . declaracion
    (23) instruccion -> . asignacion
    (24) instruccion -> . mientras
    (25) instruccion -> . si
    (26) instruccion -> . para
    (27) instruccion -> . lectura
    (28) instruccion -> . escritura
    (31) declaracion -> . tipo defineTipo : ID listaVar
    (32) declaracion -> . tipo defineTipo : ID = operacion listaVar
    (4) asignacion -> . ID = operacion
    (70) mientras -> . MIENTRAS ( operacionLogica ) HACER instrucciones FINMIENTRAS
    (64) si -> . SI ( operacionLogica ) ENTONCES instrucciones sino FINSI
    (65) si -> . SI ( operacionLogica ) OPAND ( operacionLogica ) ENTONCES instrucciones sino FINSI
    (66) si -> . SI ( operacionLogica ) OPOR ( operacionLogica ) ENTONCES instrucciones sino FINSI
    (67) si -> . SI ( operacionLogica ) OPXOR ( operacionLogica ) ENTONCES instrucciones sino FINSI
    (71) para -> . PARA ID = numero HASTA numero inc instrucciones FINPARA
    (60) lectura -> . LEER ( ID )
    (61) escritura -> . ESCRIBIR ( CADENALITERAL )
    (62) escritura -> . ESCRIBIR ( operacion )
    (63) escritura -> . ESCRIBIR ( ID )
    (37) tipo -> . ENTERO
    (38) tipo -> . CARACTER
    (39) tipo -> . REAL
    (40) tipo -> . CADENA
    (41) tipo -> . BOOLEANO

    FIN             reduce using rule 3 (instrucciones -> .)
    ID              shift and go to state 6
    MIENTRAS        shift and go to state 17
    SI              shift and go to state 18
    PARA            shift and go to state 19
    LEER            shift and go to state 20
    ESCRIBIR        shift and go to state 21
    ENTERO          shift and go to state 22
    CARACTER        shift and go to state 23
    REAL            shift and go to state 24
    CADENA          shift and go to state 25
    BOOLEANO        shift and go to state 26

    instrucciones                  shift and go to state 7
    instruccion                    shift and go to state 8
    declaracion                    shift and go to state 9
    asignacion                     shift and go to state 10
    mientras                       shift and go to state 11
    si                             shift and go to state 12
    para                           shift and go to state 13
    lectura                        shift and go to state 14
    escritura                      shift and go to state 15
    tipo                           shift and go to state 16

state 6

    (4) asignacion -> ID . = operacion

    =               shift and go to state 27


state 7

    (1) A -> ALGORITMO ID PRINCIPAL INICIO instrucciones . FIN

    FIN             shift and go to state 28


state 8

    (2) instrucciones -> instruccion . instrucciones
    (2) instrucciones -> . instruccion instrucciones
    (3) instrucciones -> .
    (22) instruccion -> . declaracion
    (23) instruccion -> . asignacion
    (24) instruccion -> . mientras
    (25) instruccion -> . si
    (26) instruccion -> . para
    (27) instruccion -> . lectura
    (28) instruccion -> . escritura
    (31) declaracion -> . tipo defineTipo : ID listaVar
    (32) declaracion -> . tipo defineTipo : ID = operacion listaVar
    (4) asignacion -> . ID = operacion
    (70) mientras -> . MIENTRAS ( operacionLogica ) HACER instrucciones FINMIENTRAS
    (64) si -> . SI ( operacionLogica ) ENTONCES instrucciones sino FINSI
    (65) si -> . SI ( operacionLogica ) OPAND ( operacionLogica ) ENTONCES instrucciones sino FINSI
    (66) si -> . SI ( operacionLogica ) OPOR ( operacionLogica ) ENTONCES instrucciones sino FINSI
    (67) si -> . SI ( operacionLogica ) OPXOR ( operacionLogica ) ENTONCES instrucciones sino FINSI
    (71) para -> . PARA ID = numero HASTA numero inc instrucciones FINPARA
    (60) lectura -> . LEER ( ID )
    (61) escritura -> . ESCRIBIR ( CADENALITERAL )
    (62) escritura -> . ESCRIBIR ( operacion )
    (63) escritura -> . ESCRIBIR ( ID )
    (37) tipo -> . ENTERO
    (38) tipo -> . CARACTER
    (39) tipo -> . REAL
    (40) tipo -> . CADENA
    (41) tipo -> . BOOLEANO

    FIN             reduce using rule 3 (instrucciones -> .)
    FINMIENTRAS     reduce using rule 3 (instrucciones -> .)
    SINO            reduce using rule 3 (instrucciones -> .)
    FINSI           reduce using rule 3 (instrucciones -> .)
    FINPARA         reduce using rule 3 (instrucciones -> .)
    ID              shift and go to state 6
    MIENTRAS        shift and go to state 17
    SI              shift and go to state 18
    PARA            shift and go to state 19
    LEER            shift and go to state 20
    ESCRIBIR        shift and go to state 21
    ENTERO          shift and go to state 22
    CARACTER        shift and go to state 23
    REAL            shift and go to state 24
    CADENA          shift and go to state 25
    BOOLEANO        shift and go to state 26

    instruccion                    shift and go to state 8
    instrucciones                  shift and go to state 29
    declaracion                    shift and go to state 9
    asignacion                     shift and go to state 10
    mientras                       shift and go to state 11
    si                             shift and go to state 12
    para                           shift and go to state 13
    lectura                        shift and go to state 14
    escritura                      shift and go to state 15
    tipo                           shift and go to state 16

state 9

    (22) instruccion -> declaracion .

    ID              reduce using rule 22 (instruccion -> declaracion .)
    MIENTRAS        reduce using rule 22 (instruccion -> declaracion .)
    SI              reduce using rule 22 (instruccion -> declaracion .)
    PARA            reduce using rule 22 (instruccion -> declaracion .)
    LEER            reduce using rule 22 (instruccion -> declaracion .)
    ESCRIBIR        reduce using rule 22 (instruccion -> declaracion .)
    ENTERO          reduce using rule 22 (instruccion -> declaracion .)
    CARACTER        reduce using rule 22 (instruccion -> declaracion .)
    REAL            reduce using rule 22 (instruccion -> declaracion .)
    CADENA          reduce using rule 22 (instruccion -> declaracion .)
    BOOLEANO        reduce using rule 22 (instruccion -> declaracion .)
    FIN             reduce using rule 22 (instruccion -> declaracion .)
    FINMIENTRAS     reduce using rule 22 (instruccion -> declaracion .)
    SINO            reduce using rule 22 (instruccion -> declaracion .)
    FINSI           reduce using rule 22 (instruccion -> declaracion .)
    FINPARA         reduce using rule 22 (instruccion -> declaracion .)


state 10

    (23) instruccion -> asignacion .

    ID              reduce using rule 23 (instruccion -> asignacion .)
    MIENTRAS        reduce using rule 23 (instruccion -> asignacion .)
    SI              reduce using rule 23 (instruccion -> asignacion .)
    PARA            reduce using rule 23 (instruccion -> asignacion .)
    LEER            reduce using rule 23 (instruccion -> asignacion .)
    ESCRIBIR        reduce using rule 23 (instruccion -> asignacion .)
    ENTERO          reduce using rule 23 (instruccion -> asignacion .)
    CARACTER        reduce using rule 23 (instruccion -> asignacion .)
    REAL            reduce using rule 23 (instruccion -> asignacion .)
    CADENA          reduce using rule 23 (instruccion -> asignacion .)
    BOOLEANO        reduce using rule 23 (instruccion -> asignacion .)
    FIN             reduce using rule 23 (instruccion -> asignacion .)
    FINMIENTRAS     reduce using rule 23 (instruccion -> asignacion .)
    SINO            reduce using rule 23 (instruccion -> asignacion .)
    FINSI           reduce using rule 23 (instruccion -> asignacion .)
    FINPARA         reduce using rule 23 (instruccion -> asignacion .)


state 11

    (24) instruccion -> mientras .

    ID              reduce using rule 24 (instruccion -> mientras .)
    MIENTRAS        reduce using rule 24 (instruccion -> mientras .)
    SI              reduce using rule 24 (instruccion -> mientras .)
    PARA            reduce using rule 24 (instruccion -> mientras .)
    LEER            reduce using rule 24 (instruccion -> mientras .)
    ESCRIBIR        reduce using rule 24 (instruccion -> mientras .)
    ENTERO          reduce using rule 24 (instruccion -> mientras .)
    CARACTER        reduce using rule 24 (instruccion -> mientras .)
    REAL            reduce using rule 24 (instruccion -> mientras .)
    CADENA          reduce using rule 24 (instruccion -> mientras .)
    BOOLEANO        reduce using rule 24 (instruccion -> mientras .)
    FIN             reduce using rule 24 (instruccion -> mientras .)
    FINMIENTRAS     reduce using rule 24 (instruccion -> mientras .)
    SINO            reduce using rule 24 (instruccion -> mientras .)
    FINSI           reduce using rule 24 (instruccion -> mientras .)
    FINPARA         reduce using rule 24 (instruccion -> mientras .)


state 12

    (25) instruccion -> si .

    ID              reduce using rule 25 (instruccion -> si .)
    MIENTRAS        reduce using rule 25 (instruccion -> si .)
    SI              reduce using rule 25 (instruccion -> si .)
    PARA            reduce using rule 25 (instruccion -> si .)
    LEER            reduce using rule 25 (instruccion -> si .)
    ESCRIBIR        reduce using rule 25 (instruccion -> si .)
    ENTERO          reduce using rule 25 (instruccion -> si .)
    CARACTER        reduce using rule 25 (instruccion -> si .)
    REAL            reduce using rule 25 (instruccion -> si .)
    CADENA          reduce using rule 25 (instruccion -> si .)
    BOOLEANO        reduce using rule 25 (instruccion -> si .)
    FIN             reduce using rule 25 (instruccion -> si .)
    FINMIENTRAS     reduce using rule 25 (instruccion -> si .)
    SINO            reduce using rule 25 (instruccion -> si .)
    FINSI           reduce using rule 25 (instruccion -> si .)
    FINPARA         reduce using rule 25 (instruccion -> si .)


state 13

    (26) instruccion -> para .

    ID              reduce using rule 26 (instruccion -> para .)
    MIENTRAS        reduce using rule 26 (instruccion -> para .)
    SI              reduce using rule 26 (instruccion -> para .)
    PARA            reduce using rule 26 (instruccion -> para .)
    LEER            reduce using rule 26 (instruccion -> para .)
    ESCRIBIR        reduce using rule 26 (instruccion -> para .)
    ENTERO          reduce using rule 26 (instruccion -> para .)
    CARACTER        reduce using rule 26 (instruccion -> para .)
    REAL            reduce using rule 26 (instruccion -> para .)
    CADENA          reduce using rule 26 (instruccion -> para .)
    BOOLEANO        reduce using rule 26 (instruccion -> para .)
    FIN             reduce using rule 26 (instruccion -> para .)
    FINMIENTRAS     reduce using rule 26 (instruccion -> para .)
    SINO            reduce using rule 26 (instruccion -> para .)
    FINSI           reduce using rule 26 (instruccion -> para .)
    FINPARA         reduce using rule 26 (instruccion -> para .)


state 14

    (27) instruccion -> lectura .

    ID              reduce using rule 27 (instruccion -> lectura .)
    MIENTRAS        reduce using rule 27 (instruccion -> lectura .)
    SI              reduce using rule 27 (instruccion -> lectura .)
    PARA            reduce using rule 27 (instruccion -> lectura .)
    LEER            reduce using rule 27 (instruccion -> lectura .)
    ESCRIBIR        reduce using rule 27 (instruccion -> lectura .)
    ENTERO          reduce using rule 27 (instruccion -> lectura .)
    CARACTER        reduce using rule 27 (instruccion -> lectura .)
    REAL            reduce using rule 27 (instruccion -> lectura .)
    CADENA          reduce using rule 27 (instruccion -> lectura .)
    BOOLEANO        reduce using rule 27 (instruccion -> lectura .)
    FIN             reduce using rule 27 (instruccion -> lectura .)
    FINMIENTRAS     reduce using rule 27 (instruccion -> lectura .)
    SINO            reduce using rule 27 (instruccion -> lectura .)
    FINSI           reduce using rule 27 (instruccion -> lectura .)
    FINPARA         reduce using rule 27 (instruccion -> lectura .)


state 15

    (28) instruccion -> escritura .

    ID              reduce using rule 28 (instruccion -> escritura .)
    MIENTRAS        reduce using rule 28 (instruccion -> escritura .)
    SI              reduce using rule 28 (instruccion -> escritura .)
    PARA            reduce using rule 28 (instruccion -> escritura .)
    LEER            reduce using rule 28 (instruccion -> escritura .)
    ESCRIBIR        reduce using rule 28 (instruccion -> escritura .)
    ENTERO          reduce using rule 28 (instruccion -> escritura .)
    CARACTER        reduce using rule 28 (instruccion -> escritura .)
    REAL            reduce using rule 28 (instruccion -> escritura .)
    CADENA          reduce using rule 28 (instruccion -> escritura .)
    BOOLEANO        reduce using rule 28 (instruccion -> escritura .)
    FIN             reduce using rule 28 (instruccion -> escritura .)
    FINMIENTRAS     reduce using rule 28 (instruccion -> escritura .)
    SINO            reduce using rule 28 (instruccion -> escritura .)
    FINSI           reduce using rule 28 (instruccion -> escritura .)
    FINPARA         reduce using rule 28 (instruccion -> escritura .)


state 16

    (31) declaracion -> tipo . defineTipo : ID listaVar
    (32) declaracion -> tipo . defineTipo : ID = operacion listaVar
    (33) defineTipo -> .

    :               reduce using rule 33 (defineTipo -> .)

    defineTipo                     shift and go to state 30

state 17

    (70) mientras -> MIENTRAS . ( operacionLogica ) HACER instrucciones FINMIENTRAS

    (               shift and go to state 31


state 18

    (64) si -> SI . ( operacionLogica ) ENTONCES instrucciones sino FINSI
    (65) si -> SI . ( operacionLogica ) OPAND ( operacionLogica ) ENTONCES instrucciones sino FINSI
    (66) si -> SI . ( operacionLogica ) OPOR ( operacionLogica ) ENTONCES instrucciones sino FINSI
    (67) si -> SI . ( operacionLogica ) OPXOR ( operacionLogica ) ENTONCES instrucciones sino FINSI

    (               shift and go to state 32


state 19

    (71) para -> PARA . ID = numero HASTA numero inc instrucciones FINPARA

    ID              shift and go to state 33


state 20

    (60) lectura -> LEER . ( ID )

    (               shift and go to state 34


state 21

    (61) escritura -> ESCRIBIR . ( CADENALITERAL )
    (62) escritura -> ESCRIBIR . ( operacion )
    (63) escritura -> ESCRIBIR . ( ID )

    (               shift and go to state 35


state 22

    (37) tipo -> ENTERO .

    :               reduce using rule 37 (tipo -> ENTERO .)


state 23

    (38) tipo -> CARACTER .

    :               reduce using rule 38 (tipo -> CARACTER .)


state 24

    (39) tipo -> REAL .

    :               reduce using rule 39 (tipo -> REAL .)


state 25

    (40) tipo -> CADENA .

    :               reduce using rule 40 (tipo -> CADENA .)


state 26

    (41) tipo -> BOOLEANO .

    :               reduce using rule 41 (tipo -> BOOLEANO .)


state 27

    (4) asignacion -> ID = . operacion
    (5) operacion -> .
    (6) operacion -> . operacion + operacion
    (7) operacion -> . operacion - operacion
    (8) operacion -> . operacion * operacion
    (9) operacion -> . operacion / operacion
    (10) operacion -> . operacion MAYORIGUAL operacion
    (11) operacion -> . operacion MENORIGUAL operacion
    (12) operacion -> . operacion IGUAL operacion
    (13) operacion -> . operacion DIFERENTE operacion
    (14) operacion -> . operacion < operacion
    (15) operacion -> . operacion > operacion
    (16) operacion -> . ( operacion )
    (17) operacion -> . - operacion
    (18) operacion -> . ID
    (19) operacion -> . numero
    (20) operacion -> . CADENALITERAL
    (21) operacion -> . CARACTER
    (29) numero -> . NUMEROENTERO
    (30) numero -> . NUMEROREAL

  ! shift/reduce conflict for - resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for CARACTER resolved as shift
    +               reduce using rule 5 (operacion -> .)
    *               reduce using rule 5 (operacion -> .)
    /               reduce using rule 5 (operacion -> .)
    MAYORIGUAL      reduce using rule 5 (operacion -> .)
    MENORIGUAL      reduce using rule 5 (operacion -> .)
    IGUAL           reduce using rule 5 (operacion -> .)
    DIFERENTE       reduce using rule 5 (operacion -> .)
    <               reduce using rule 5 (operacion -> .)
    >               reduce using rule 5 (operacion -> .)
    MIENTRAS        reduce using rule 5 (operacion -> .)
    SI              reduce using rule 5 (operacion -> .)
    PARA            reduce using rule 5 (operacion -> .)
    LEER            reduce using rule 5 (operacion -> .)
    ESCRIBIR        reduce using rule 5 (operacion -> .)
    ENTERO          reduce using rule 5 (operacion -> .)
    REAL            reduce using rule 5 (operacion -> .)
    CADENA          reduce using rule 5 (operacion -> .)
    BOOLEANO        reduce using rule 5 (operacion -> .)
    FIN             reduce using rule 5 (operacion -> .)
    FINMIENTRAS     reduce using rule 5 (operacion -> .)
    SINO            reduce using rule 5 (operacion -> .)
    FINSI           reduce using rule 5 (operacion -> .)
    FINPARA         reduce using rule 5 (operacion -> .)
    (               shift and go to state 39
    -               shift and go to state 38
    ID              shift and go to state 36
    CADENALITERAL   shift and go to state 41
    CARACTER        shift and go to state 42
    NUMEROENTERO    shift and go to state 43
    NUMEROREAL      shift and go to state 44

  ! -               [ reduce using rule 5 (operacion -> .) ]
  ! ID              [ reduce using rule 5 (operacion -> .) ]
  ! CARACTER        [ reduce using rule 5 (operacion -> .) ]

    operacion                      shift and go to state 37
    numero                         shift and go to state 40

state 28

    (1) A -> ALGORITMO ID PRINCIPAL INICIO instrucciones FIN .

    $end            reduce using rule 1 (A -> ALGORITMO ID PRINCIPAL INICIO instrucciones FIN .)


state 29

    (2) instrucciones -> instruccion instrucciones .

    FIN             reduce using rule 2 (instrucciones -> instruccion instrucciones .)
    FINMIENTRAS     reduce using rule 2 (instrucciones -> instruccion instrucciones .)
    SINO            reduce using rule 2 (instrucciones -> instruccion instrucciones .)
    FINSI           reduce using rule 2 (instrucciones -> instruccion instrucciones .)
    FINPARA         reduce using rule 2 (instrucciones -> instruccion instrucciones .)


state 30

    (31) declaracion -> tipo defineTipo . : ID listaVar
    (32) declaracion -> tipo defineTipo . : ID = operacion listaVar

    :               shift and go to state 45


state 31

    (70) mientras -> MIENTRAS ( . operacionLogica ) HACER instrucciones FINMIENTRAS
    (42) operacionLogica -> . operacion
    (43) operacionLogica -> . operacionLogica OPOR operacion
    (44) operacionLogica -> . operacionLogica OPAND operacion
    (45) operacionLogica -> . operacionLogica OPXOR operacion
    (46) operacionLogica -> . OPNOT operacion
    (47) operacionLogica -> . ( operacionLogica )
    (5) operacion -> .
    (6) operacion -> . operacion + operacion
    (7) operacion -> . operacion - operacion
    (8) operacion -> . operacion * operacion
    (9) operacion -> . operacion / operacion
    (10) operacion -> . operacion MAYORIGUAL operacion
    (11) operacion -> . operacion MENORIGUAL operacion
    (12) operacion -> . operacion IGUAL operacion
    (13) operacion -> . operacion DIFERENTE operacion
    (14) operacion -> . operacion < operacion
    (15) operacion -> . operacion > operacion
    (16) operacion -> . ( operacion )
    (17) operacion -> . - operacion
    (18) operacion -> . ID
    (19) operacion -> . numero
    (20) operacion -> . CADENALITERAL
    (21) operacion -> . CARACTER
    (29) numero -> . NUMEROENTERO
    (30) numero -> . NUMEROREAL
